・13モデリング ・10途中

--- a/GoodCode_BadCode/10.名前設計.md
+++ b/GoodCode_BadCode/10.名前設計.md
@@ -1,1 +1,81 @@
 # 10. 名前設計 あるべき構造を見破る名前
+
+適切な責務を考え、密結合を防止するには、クラスやメソッドへの名付け、すなわち命名も重要なポイントになる。  
+名前をないがしろにすると、責務が入り乱れて密結合になったり、巨大化して神クラスになったりする。  
+
+本章では、名前をないがしろにした時、どんな悪魔が生まれてしまうのか、悪魔退治のためにはどんな命名をすればいいのか、悪魔に打ち勝つための命名設計の方法を解説する。  
+
+図10.1 名前をどう付けるか、本来は一大事だ  
+![図10.1 名前をどう付けるか、本来は一大事だ](https://item-shopping.c.yimg.jp/i/n/goo10shop_a-4297127830-20220518_4)  
+
+本章全体に共通する考え方の基本は、**目的駆動名前設計**となる。  
+ソフトウェアで達成したい目的をベースに名前を設計(命名)する。  
+※目的駆動名前設計は著者が考えた造語。  
+
+表10.1 ソフトウェアで達成したい目的の例  
+|ソフトウェア|目的の例|
+|---|---|
+|ECサイト|キャンペーンセールで顧客の購買意欲を喚起したい、まとめ買いを励行させて配送料低減を実現したい。|
+|ゲーム|武器の強化やカスタマイズを楽しんでほしい、罠による対戦駆け引きを楽しんでほしい|
+|社内向けライブラリ|自部門の開発生産性を高めたい、複数の製品ラインナップを同じ方法で制御できるようにして開発を楽に進めたい|
+
+目的駆動名前設計は、名前から目的や意図が読み取れることを特徴とする。  
+そして名前「設計」と関している通り、これまで紹介したオブジェクト指向設計や単一責任原則を守る設計のように、問題解決を意図した作りにする。  
+
+なお、顧客向けのプロダクト開発においては、「会社の事業的にどういう目的を達成したいのか」というビジネス目的を考えることになるため、ビジネス目的を中心に話を進める。  
+
+---
+---
+
+## 10.1 悪魔を引き寄せる名前
+
+まずは、名前設計が不十分なために悪魔を呼び寄せてしまうケースを取り上げる。  
+例えばECサイトでの商品。  
+ありがちなのは、商品をそのまま「商品クラス」と設計してしまうこと。  
+
+図10.2 巨大な商品クラス  
+![図10.2 巨大な商品クラス](Asset/%E5%9B%B310.2.jpg)
+
+ECサイトは商品を中心に成り立っている。  
+出品、予約、注文、発送など、商品を取り扱うユースケースが沢山ある。  
+従って、単純な商品クラスは往々にして様々なユースケースのクラスと関係してしまいがちである。  
+商品クラス自体も、結びついたクラスに関係するロジックを持ち始め、どんどん巨大化複雑化して密結合状態になってしまう。  
+
+こうして巨大化した商品クラスに対し仕様変更が発生した場合どうなるだろうか？  
+変更影響により動作にバグが生じないか、商品クラスに関連のあるクラスをすべてチェックしなければならなくなることがよくある。  
+影響範囲が広すぎる多面い、開発生産性が低下する。  
+
+図10.3 広すぎる影響範囲  
+![図10.3 広すぎる影響範囲](Asset/%E5%9B%B310.3.jpg)
+
+---
+
+### 10.1.1 関心の分離
+
+商品クラスはなぜこんな状態になっているのだろうか。  
+
+よく見てみよう。  
+商品の周囲には、予約、注文、発送など様々な関心事が取り巻いている。  
+そして商品クラスは様々な関心事と結びつき、結びついた関心事のロジックを持ってしまっている。  
+すなわち密結合になっている。  
+
+図10.4 関心事に分離し隔離する  
+
+``` txt
+        |         |
+関心事A | 関心事B | 関心事C
+        |         |
+```
+
+密結合を解消し、疎結合高凝集にするためには**関心の分離**が重要となる。  
+関心の分離とは「関心事、つまりユースケースや目的、役割ごとに分離する」というソフトウェア工学における考え方である。  
+
+つまり商品クラスは**関心事それぞれのクラスへの分割が必要**、と考えられる。  
+以下のように関心事それぞれに商品クラスを分割してみる。  
+
+図10.5 関心事ごとに分割してみる  
+![図10.5 関心事ごとに分割してみる](Asset/%E5%9B%B310.5.jpg)  
+![図10.6 よりふさわしい名前に変えてみる](Asset/%E5%9B%B310.6.jpg)  
+![図10.7 仕様変更時の影響範囲が小さくなる](Asset/%E5%9B%B310.7.jpg)  
+![図10.8 「商品」は意味がとても広い](Asset/%E5%9B%B310.8.jpg)  
+![図10.9 目的に特化した名前を使う](Asset/%E5%9B%B310.9.jpg)  
