--- a/GoodCode_BadCode/9.設計の健全性を損なう様々な要因.md
+++ b/GoodCode_BadCode/9.設計の健全性を損なう様々な要因.md
@@ -592,8 +592,8 @@ class User {
 // @return 指定したクラスのインスタンス
 static Object generateInstance(String packageName, String className) throws Exception {
     String fillname = packageName + "." + className;
-    Class klass = class.forName(fillName);
-    Constractor constructor = klass.getDeclaredConstructor();
+    Class class = class.forName(fillName);
+    Constractor constructor = class.getDeclaredConstructor();
     return constructor.newInstance();
 }
 
