--- a/GoodCode_BadCode/10.名前設計.md
+++ b/GoodCode_BadCode/10.名前設計.md
@@ -43,7 +43,7 @@ ECサイトは商品を中心に成り立っている。
 
 こうして巨大化した商品クラスに対し仕様変更が発生した場合どうなるだろうか？  
 変更影響により動作にバグが生じないか、商品クラスに関連のあるクラスをすべてチェックしなければならなくなることがよくある。  
-影響範囲が広すぎる多面い、開発生産性が低下する。  
+影響範囲が広すぎるために、開発生産性が低下する。  
 
 図10.3 広すぎる影響範囲  
 ![図10.3 広すぎる影響範囲](Asset/%E5%9B%B310.3.jpg)
@@ -75,7 +75,299 @@ ECサイトは商品を中心に成り立っている。
 
 図10.5 関心事ごとに分割してみる  
 ![図10.5 関心事ごとに分割してみる](Asset/%E5%9B%B310.5.jpg)  
+
+---
+
+### 10.1.2 関心事にふさわしい命名
+
+分割はしてみたが、すべてのクラスに「商品」と命名はできない。  
+どうすればいいだろうか。  
+違う名前を付けられないか検討してみる。  
+
+例えば、注文目的の商品は何と呼べるだろうか。  
+「注文品」と呼ぶのはどうだろうか。  
+同じ要領で、予約では予約品、発送では発送品と呼び変えてみた。  
+
+図10.6 よりふさわしい名前に変えてみる  
 ![図10.6 よりふさわしい名前に変えてみる](Asset/%E5%9B%B310.6.jpg)  
+
+**関心事にふさわしい命名**ができたと思われる。  
+
+後は、分離したいクラスそれぞれに、各関心事にふさわしいロジックをカプセル化すれば良いだろう。  
+例えば、注文品クラスならば、商品注文に関するロジックだけを内部にカプセル化すれば良い。  
+(在庫品、予約品、注文品、発送品が同じ商品化(一意性の担保)については、同じユニークIDを使うことで解決する)  
+
+こうすることで、関心の分離により疎結合高凝集が果たされる。  
+関心事それぞれでクラスを疎結合高凝集にしておけば、例えば注文に関して仕様変更が生じた場合、注文関連のクラスだけに注意を払えば良くなる。  
+**影響範囲が低減**し、開発生産性が向上する。  
+
+図10.7 仕様変更時の影響範囲が小さくなる  
 ![図10.7 仕様変更時の影響範囲が小さくなる](Asset/%E5%9B%B310.7.jpg)  
+
+---
+
+### 10.1.3 大雑把で意味が不明瞭な名前
+
+開発初期に決めた名前は、大雑把であることが多い。  
+大雑把だと何がまずいのだろうか？  
+開発現場では、下記のようなことが非常に多く見受けられる。  
+
+>社員A「今度の仕様変更で、開発中のECサイトに予約機能が追加される。予約のロジック追加が商品周りでも必要だと思うけど、どこに実装しよう？」  
+>社員B「商品クラスがすでにあるじゃないか。商品クラスに実装しちまえよ」  
+
+「商品」という名が大雑把すぎて、商品に関するあらゆるロジックが実装できそうに見えてしまう。  
+大雑把で意味が広い名前は、あらゆるロジックを引き付けてしまう、強力な心理的引力が働く。  
+
+図10.8 「商品」は意味がとても広い  
 ![図10.8 「商品」は意味がとても広い](Asset/%E5%9B%B310.8.jpg)  
+
+「商品」は販売目的を体現していそうな名前に見えるが、予約、注文、発送といった様々な目的に使われやすい、いい加減な名前であることが分かる。  
+これは陥りがちな罠となる。  
+
+こうした目的不明なクラスを**目的不明オブジェクト**と著者は呼称している。  
+目的不明オブジェクトは、あっという間に巨大化してしまう。  
+
+こうした事態に陥らないよう、関心の分離を意識した名前を設計する。  
+関心の分離には、ビジネス目的を名前として表現することがポイントになる。  
+
+---
+---
+
+### 10.2 名前を設計する - 目的駆動命名設計
+
+著者はクラスやメソッドに名付けることを、「命名」ではなく、「**名前設計**」と呼称している。  
+ここでの設計は「ある課題を解決するための仕組みや構造を、考えたり、作り上げたりすること」と定義する。  
+
+**プログラミングにおける名前の役割は、可読性を高めることだけではない**と考える。  
+※書籍「リーダブルコード」などは可読性に強く注目している。  
+関心の分離を意識し、ビジネス目的に沿った名前を付与することは、疎結合高凝集を実現する上で重要である。  
+設計上大きな意味があるため、「**名前を設計する**」と言う。  
+
+目的駆動名前設計は、目的をベースに名前を設計する。  
+ソフトウェアで達成したい目的や意図を、名前から読み取れるようにする。  
+重要なポイントは以下のとおりである。  
+
+- 可能な限り具体的で、意味範囲が狭い、特化した名前を選ぶ  
+- 存在ベースではなく、目的ベースで名前を考える  
+- どんな関心事があるか分析する  
+- 声に出して話してみる  
+- 利用規約を読んでみる  
+- 違う名前に置き換えられないか検討する  
+- 疎結合高凝集になっているか点検する  
+
+順番に説明していく。  
+
+---
+
+### 10.2.1 可能な限り具体的で、意味範囲が狭い、目的に特化した名前を選ぶ
+
+目的駆動名前設計で最も重要なポイントとなる。  
+
+図10.9 目的に特化した名前を使う  
 ![図10.9 目的に特化した名前を使う](Asset/%E5%9B%B310.9.jpg)  
+
+特定の目的の達成に特化した、きわめて意味範囲の狭い名前をクラスに付与している。  
+※ここでの目的とは、ソフトウェアで達成したい目的を指す。  
+
+そして、顧客向けプロダクト開発における目的は、「会社の事業的にどういう目的を達成したいのか」というビジネス目的となる。  
+ビジネス目的に特化することで、以下の効果が生まれやすくなる。  
+
+- 名前とは無関係なロジックを排除しやすくなる。  
+- クラスが小さくなる。  
+- 関係するクラスの個数が少なくなる。結合度(15.5.4)が低減する。  
+- 関係クラス個数が少ないので、仕様変更時に考慮を要する影響範囲が小さく済む。  
+- 目的に特化した名前であるため、どこを変更すればよいかすぐ探し出せる。  
+- 開発生産性が向上する。  
+
+---
+
+### 10.2.2 存在ベースではなく、目的ベースで名前を考える
+
+ビジネス目的に特化した名前とはどんなものなのか、具体的に解説する。  
+
+まずは、目的に特化していないケースを考えてみる。  
+たとえば「人」や「ユーザー」といった、人物がただ存在しているだけのような、存在ベースの名前を考えてみる。  
+こうした名前をECサイトのロジックに利用したらどうなるだろうか。  
+ECサイトの利用者は、個人以外に法人である可能性もある。  
+「ユーザー」が個人と法人両方の意味を持ち、ロジックが混乱する可能性がある。  
+(弊害については第13章のモデリングを参照)  
+
+単純に存在を示すだけの名前は、意味が多重になりがちで、目的不明オブジェクトになる。  
+ロジックレベルで混乱をきたしてしまう。  
+
+従って、具体的な目的が明確にわかるような、目的ベースの名前にする。  
+
+表10.2 目的ベースで考えた命名の例  
+|存在ベース|目的ベース|  
+|---|---|
+|住所|配送元、配送先、勤務先、本籍地|
+|金額|請求金額、消費税額、延滞保証料、キャンペーン割引料金|
+|ユーザー|アカウント、個人プロフィール、職務経歴|
+|ユーザー名|アカウント名、表示名、本名、法人名|
+|商品|入庫品、予約品、注文品、配送品|
+
+ECサイトでの住所を利用する目的は、商品の配送である。  
+従って、単に「住所」といった無味乾燥な存在ベースの名前ではなく、「配送元」「配送先」と目的特化の名前にすると混乱を防げる。  
+
+「金額」は単に存在ベースであり、どうとでも解釈可能である。  
+目的特化にすると、「請求金額」「消費税額」「延滞保証料」「キャンペーン割引料金」などが考えられる。  
+「ユーザー名」にしても、「アカウント名」「表示名」「本名」などのように、目的に応じた命名が考えられる。  
+
+---
+
+### 10.2.3 どんなビジネス目的があるか分析する
+
+ビジネス目的に特化した命名をするには、どんなビジネス目的があるか網羅する必要がある。  
+そのために、ソフトウェアが対象とする目的や事柄を分析する必要がある。  
+
+例えば、ECサイトでは出品、注文、発送、キャンペーン。  
+ゲームでは、武器、モンスター、アイテム、タイアップイベント。  
+SNSでは、メッセージ、フォロー、タイムラインなどがある。  
+ソフトウェアによって取り扱う目的や事柄が違う。  
+
+登場人物や事柄を列挙したり、関係性を整理したり、分析してみよう。  
+チームで集まって、ホワイトボードや模造紙に書いてみるのがいいだろう。  
+付箋を使えば、関係し合うものをグルーピングするなど、考えの整理がより捗るだろう。  
+
+---
+
+### 10.2.4 声に出して話してみる
+
+人が脳内で考えていることは意外なほどぼんやりしていて、ハッキリしないものだ。  
+
+先述の分析活動には、陥りがちな罠がある。  
+名前が沢山書きだされても、慣れていないと名前の背後にあるビジネス目的まで書き出されることが中々ないのだ。  
+
+名前も大事だが、どんな目的を達成したいのか、どう使われるのか、何と関係するのか、その理由など、背景と意図の認識が整理され、チームと一致していることが重要である。  
+
+目的や意図の認識がお互いに違っていると、名前が十分にブラッシュアップされない。  
+この課題の解決には、やはり声に出して話してみることが重要である。  
+
+ビジネス面のことを良く知っている人と話あってみよう。  
+目的や意図の認識に違和感がある場合は、会話中すぐフィードバックをもらえる。  
+より正確で具体的なビジネス目的や、目的に沿った名前を引き出せることがある。  
+つまり、会話それ自体がリアルタイム分析行為になるのだ。  
+
+**ラバーダッキング**と呼ばれるデバッグ手法がある。  
+これはプログラミングで何か問題が発生した時に、それを誰かに説明すると自ら原因に気づき、自己解決する手法である。  
+ラバーダッキングの観点からも、声に出して話すのは分析行為として理に適っているのである。  
+
+積極的に話し合い、会話の中に特化した名前がないか注意深く耳をそばだてよう。  
+そして名前や関心事を集めていこう。  
+
+この声にだして話す分析活動は、書籍「ドメイン駆動設計」の**ユビキタス言語**を由来としている。  
+ユビキタス言語とは、チーム全体で意図を共有するための言葉である。  
+同じ意図の名前を、会話、ドキュメント、クラス名やメソッド名で共通して使うことで、意図の減衰を防止し、設計のいびつさを解消するのに役立ちます。  
+チームでユビキタス言語を作る時、会話し続け、継続的にブラッシュアップすることの重要さをドメイン駆動設計では説いている。  
+
+---
+
+### 10.2.5 利用規約を読んでみる
+
+利用規約には、サービスの取り扱いやルールが極めて厳密な言い回しで書かれており、特化した名前の参考になる。  
+以下は、架空のフリーマーケットサービスにおける利用規約の一部である。  
+
+>**購入者**が商品購入手続きを完了した時点をもって、**売買契約**が**締結**されたものします。  
+>売買契約が締結した場合、**出品者**は当社に**サービス利用料**を支払うものとする。  
+>サービス利用料は、売買契約が締結した時点の商品の**販売価格**に、**販売手数料率**を乗じた金額となる。  
+
+「購入者」「出品者」「売買契約」など、厳密が名前が色々あるのが分かる。  
+これらを参考にすると、利用者を表すクラスは単に「ユーザー」クラスではなく、「購入者」クラスや「出品者」クラスに分けることができる。  
+
+商品購入は「売買契約」クラス、および「締結」メソッドとして表現できそうだ。  
+金額関係では、単に「料金」と命名された変数として実装されがちだが、利用規約を参考に「サービス利用料」クラスや「販売手数料率」クラスとして表現できるだろう。  
+例えば、「サービス利用料」クラスは、リスト10.1に示す値オブジェクトとして設計できる。  
+
+``` java
+// リスト10.1
+// サービス利用料クラス
+
+class ServiceUsageFee {
+    final int amount;
+
+    // @param amount 料金金額
+    private ServiceUsageFee(final int amount) {
+        if (amount < 0){
+            throw new IllegalArgumentException("金額が0以上ではありません。");
+        }
+        this.amount = amount;
+    }
+
+    // サービス利用料を確定する
+    // @param salesPrice 販売価格
+    // @param salesCommissionRate 販売手数料率
+    // @return サービス利用料
+    static ServiceUsageFee determine(final SalesPrice salesPrice,final SalesCommissionRate salesCommissionRate) {
+        int amount = (int)(salesPrice.amount * salesCommissionRate.value);
+        return new ServiceUsageFee(amount);
+    }
+}
+```
+
+determineメソッドは、利用規約上のサービス利用料の定義と合致するのが分かる。  
+このServiceUsageFee.determineメソッドを、売買契約クラスの締結メソッドから呼び出す実装にすれば、「売買契約締結時にサービス利用料が決まる」規約と合致する。  
+利用規約と実際のロジックに一貫性が生まれる。  
+
+そのほか、販売手数料率が変動する仕様である場合は、販売手数料率を表現するSalseCommissionRateクラスに変動ロジックを実装するとよいだろう。  
+
+サービス利用料が改訂される場合は、ServiceUsageFeeクラスを変更すればよいですし、販売手数料率が改訂される場合はSalesCommissionRateクラスを変更すれば良くなる。  
+ビジネスルールとクラスが一致しているおかげで、正確に素早く変更できる。  
+
+---
+
+### 10.2.6 違う名前に置き換えられないか検討する
+
+せっかく選んだ名前の意味範囲が十分に小さくなかったり、複数の意味を持ったりしてしまっている可能性が多々ある。  
+違う名前に置き換えてみて、意味をもっと狭く出来ないか、違和感がないかなど検討してみよう。  
+
+例えば、ホテルの宿泊予約システムを考えてみる。  
+システム利用者には保守点検者もいるため、「ユーザー」と呼ぶのは意味が広すぎる。  
+まず「顧客」と命名してみる。  
+しかし、これでよいのだろうか？  
+
+宿泊する人と、宿泊料金を支払う人が同じとは限らないケースがある。  
+出張で宿泊料金を会社に請求するケースや、両親に旅行をプレゼントしたいケースが該当する。  
+
+「顧客」では、宿泊客と支払う人が異なるケースの対応が難しくなるのは、容易に想像がつく。  
+「顧客」に「宿泊する人」と「支払う人」の両方の意味が重なっているためである。  
+
+この例では、「宿泊客」と「支払者」に名前を置き換えるのが得策だろう。  
+また、違う名前を探すのには類語辞典が役に立つ。  
+
+---
+
+### 10.2.7 疎結合高凝集になっているか点検する
+
+目的に特化した名前を選ぶと、目的以外のロジックを寄せ付けにくくする。  
+
+目的だけのロジックが集まりやすく、高凝集になる。  
+目的以外のロジックが混入しそうならば、名前を見直そう。  
+
+また、ほかのクラスといくつ関連付けられているか個数を確認しよう。  
+先に挙げた商品クラスのように、何個も関連付けられているのは良くない兆候である。  
+密結合の危険性がある。  
+もっと狭い意味の、特化した名前を探してみよう。  
+複数の意味を持っているなら分解しよう。  
+関連個数が少なければ少ないほど影響範囲が低減される。  
+
+※特化した名前を洗い出していくと、現実世界の物理的存在と名前はからなずしも1:1の関係にはならず、1:Nの関係になっていく。(第13章のモデリングを参照)  
+
+---
+---
+
+## 10.3 設計時の注意すべきリスク
+
+名前設計において注意すべき点がいくつかある。  
+
+---
+
+### 10.3.1 名前無頓着になるな
+
+目的駆動名前設計の考えは、「名前に注意を払い、名前とロジックを対応付けること」を前提としている。  
+従って、名前に無頓着だとすべてが瓦解する。  
+
+**チーム開発においては、命名が重要であり、名前とロジックが対応する前提であること、名前がプログラム機構を大きく左右すること**を、チーム内で約束しよう。  
+
+---
+
+### 10.3.2 仕様変更時
